# simple-compiler

./: .gitignore  Dockerfile  README.md  TODO  check.sh  compiled_program  compiled_program_1  compiled_program_1_==_2  compiled_program_false  compiled_program_true  compiled_program_true_and_false  justfile  pyproject.toml  test.s
src/compiler/: __main__.py  analyzer.py  assembler.py  assembler_exception.py  assembly_generator.py  ast.py  builtin_type.py  ir.py  ir_generator.py  ir_generator_state.py  location.py  parser.py  parser_exception.py  token.py  tokenizer.py  type.py  type_checker.py  type_checker_exception.py
tests/: analyzer_test.py  assembler_test.py  assembly_generator_test.py  dummy_test.py  ir_generator_test.py  parser_test.py  tokenizer_test.py  type_checker_test.py  type_test.py
tests/assembly_generator_test_data/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
